feat: even more swagger things
